<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <!--region Top-->
    <TextView
        android:id="@+id/tvTopMiddle"
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_text_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTopLeft"
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_left_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTopRight"
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_right_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--endregion-->

    <!--region Top Middle-->
    <TextView
        android:id="@+id/tvTopMiddleLeft"
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_middle_left_text"
        app:layout_constraintEnd_toEndOf="@id/tvTopMiddle"
        app:layout_constraintStart_toStartOf="@id/tvTopLeft"
        app:layout_constraintTop_toBottomOf="@id/tvTopMiddle" />

    <TextView
        android:id="@+id/tvTopMiddleRight"
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_middle_right_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTopMiddle"
        app:layout_constraintTop_toBottomOf="@id/tvTopMiddle" />
    <!--endregion-->

    <!--region Middle-->
    <TextView
        android:id="@+id/tvMiddle"
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_left_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_right_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--endregion-->

    <!--region Bottom-->
    <TextView
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBottomMiddle"
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_left_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_right_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!--endregion-->

    <TextView
        android:id="@+id/tvComment"
        style="@style/GeneralText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tvBottomMiddle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMiddle"
        tools:text="This is a comment"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/more_info_button"
        app:layout_constraintBottom_toTopOf="@id/tvMiddle"
        app:layout_constraintEnd_toEndOf="@id/tvTopMiddleRight"
        app:layout_constraintStart_toStartOf="@id/tvTopMiddleLeft"
        app:layout_constraintTop_toBottomOf="@id/tvTopMiddleLeft" />

</androidx.constraintlayout.widget.ConstraintLayout>